--- a/ui/src/app/views/pipeline/show/pipeline.show.scss
+++ b/ui/src/app/views/pipeline/show/pipeline.show.scss
@@ -5,10 +5,8 @@
   height: 100%;
 }
 
-sm-menu {
-  .ui.buttons {
-    position: absolute;
-    right: 15px;
-    margin-top: 2px;
-  }
+.ascodeButton {
+  position: absolute;
+  right: 15px;
+  top: 107px;
 }
