--- a/ui/src/app/shared/tabs/tab.html
+++ b/ui/src/app/shared/tabs/tab.html
@@ -1,7 +1,9 @@
-<a sm-item [class.active]="active" (click)="click()">
-    <ng-container *ngIf="!tab.template">
-        <i *ngIf="tab.icon" [ngClass]="[tab.icon, 'icon']"></i>
-        {{tab.translate | translate:tab.translate_args}}
+<ng-container *ngIf="!tab.template">
+    <i *ngIf="tab.icon" [ngClass]="[tab.icon, 'icon']"></i>
+    {{tab.translate | translate:tab.translate_args}}
+    <ng-container *ngIf="tab.warningText || tab.warningTemplate">
+        <i class="exclamation triangle orange icon" suiPopup [popupTemplate]="tab.warningTemplate" [popupText]="tab.warningText"></i>
     </ng-container>
-    <span #templateSibling></span>
-</a>
+</ng-container>
+<span #templateSibling></span>
+
