--- a/ui/src/app/views/application/show/application.scss
+++ b/ui/src/app/views/application/show/application.scss
@@ -13,11 +13,9 @@
   height: 100%;
 }
 
-sm-menu {
-  .ui.buttons {
-    position: absolute;
-    right: 15px;
-    margin-top: 2px;
-  }
+.ascodeButton {
+  position: absolute;
+  right: 15px;
+  top: 107px;
 }
 
