--- a/ui/src/app/views/environment/show/environment.show.scss
+++ b/ui/src/app/views/environment/show/environment.show.scss
@@ -8,12 +8,10 @@
         overflow-x: auto;
     }
 
-  sm-menu {
-    .ui.buttons {
-      position: absolute;
-      right: 15px;
-      margin-top: 2px;
-    }
+  .ascodeButton {
+    position: absolute;
+    right: 15px;
+    top: 107px;
   }
 }
 
