--- a/ui/src/app/views/workflow/show/workflow.scss
+++ b/ui/src/app/views/workflow/show/workflow.scss
@@ -36,11 +36,9 @@
     }
   }
 
-  sm-menu {
-    .ui.buttons {
-      position: absolute;
-      right: 55px;
-      margin-top: 2px;
-    }
+  .ascodeButton {
+    position: absolute;
+    right: 15px;
+    top: 107px;
   }
 }
