--- a/ui/src/app/shared/workflow/modal/node-edit/node.edit.modal.html
+++ b/ui/src/app/shared/workflow/modal/node-edit/node.edit.modal.html
@@ -33,7 +33,7 @@
                             </a>
                             <a class="item" [class.active]="selected === 'permissions'"
                                 (click)="changeView('permissions')">
-                                {{ 'common_permissions' | translate }}
+                                Permissions
                             </a>
                         </ng-container>
                         <ng-container *ngIf="hookSelected">
