--- a/ui/src/app/views/application/show/home/application.home.html
+++ b/ui/src/app/views/application/show/home/application.home.html
@@ -52,7 +52,7 @@
                     [queryParams]="{tab: 'advanced'}">{{
                     'application_home_no_integration' | translate }}</a>
             </div>
-            <h4>{{ 'common_usage' | translate}}</h4>
+            <h4>Usage</h4>
             <ng-container *ngIf="application.usage && application.usage.workflows">
                 <ul>
                     <li *ngFor="let w of application.usage.workflows">
