--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -141,7 +141,7 @@
                             <div class="ui relaxed divided list">
                                 <div class="item">
                                     <div class="content">
-                                        {{ 'common_workflows' | translate }}
+                                        Workflows
                                     </div>
                                 </div>
                             </div>
