--- a/ui/src/app/views/project/show/project.html
+++ b/ui/src/app/views/project/show/project.html
@@ -1,6 +1,6 @@
 <ng-template #tabPermissionTemplate>
     <i [ngClass]="['users', 'icon']"></i>
-    {{'common_permissions' | translate}}
+    Permissions
     <ng-template let-popup #warnPermission>
         Following groups that are not from organization "{{project.organization}}" can read the
         project:
