--- a/ui/src/app/views/settings/user/consumer-create-modal/scope-detail.html
+++ b/ui/src/app/views/settings/user/consumer-create-modal/scope-detail.html
@@ -4,7 +4,7 @@
             {{scopeDetail.scope}}
         </div>
         <div class="ui twelve wide column right aligned">
-            <a class="pointing advanced" (click)="clickAdvanced()">{{'common_advanced' | translate}}</a>
+            <a class="pointing advanced" (click)="clickAdvanced()">Advanced</a>
             <div class="ui checkbox">
                 <input type="checkbox" [ngModel]="allReadRoutesSelected" (click)="clickSelectAllRoutesRead()">
                 <label>{{'common_read' | translate}}</label>
