fix(api,ui): download worker route + user profile form
Signed-off-by: francois  samin <francois.samin@corp.ovh.com>

--- a/ui/src/app/views/settings/user/edit/user.edit.html
+++ b/ui/src/app/views/settings/user/edit/user.edit.html
@@ -15,7 +15,7 @@
                                     <div class="field">
                                         <label>{{'user_label_username' | translate}}</label>
                                         <input class="ui input" type="text" name="username" [(ngModel)]="user.username"
-                                            [disabled]="loading" [readonly]="!editable">
+                                            [disabled]="loading" readonly>
                                     </div>
                                     <div class="field">
                                         <label>{{'user_label_fullname' | translate}}</label>
