--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -1,3 +1,5 @@
 @import "node_modules/ng-zorro-antd/ng-zorro-antd.dark.less";
 
 @component-background: #383736;
+
+@layout-body-background: #2d2c2c;
