--- a/ui/src/app/shared/action/step/form/step.form.scss
+++ b/ui/src/app/shared/action/step/form/step.form.scss
@@ -1,15 +1,8 @@
 @import '../../../../../common';
-.ui.card {
-  width: 400px;
-  max-width: 400px;
+.validButton {
+  width: 200px;
 }
 
-.addbtn {
-  margin-bottom: 1em;
-}
-
-.ui.dropdown {
-  &.text:not(.icon) {
-    width: 100%;
-  }
+.ml10 {
+  margin-left: 10px;
 }
