--- a/ui/src/app/views/settings/action/form/action.form.scss
+++ b/ui/src/app/views/settings/action/form/action.form.scss
@@ -56,15 +56,24 @@
 }
 
 .bottomBtnsWrapper {
-  background-color: #f9f9f9;
   position: fixed;
   bottom: 0;
   right: 0;
   width: 430px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 10px 10px 10px 10px;
   .column {
     padding-top: 5px;
     padding-bottom: 5px;
+  }
+  .ant-row {
+    padding-bottom: 4px;
+    padding-top: 4px;
+
+    .validButton {
+      width: 200px;
+    }
+    .ml10 {
+      margin-left: 10px;
+    }
   }
 }
