--- a/ui/src/app/views/settings/action/form/action.form.html
+++ b/ui/src/app/views/settings/action/form/action.form.html
@@ -125,7 +125,7 @@
                 </button>
                 <button nz-popconfirm nzDanger  class="validButton ml10"
                                 nzType="default"
-                                nzPopconfirmTitle="Are you sure delete this action?"
+                                nzPopconfirmTitle="Are you sure you want to delete this action?"
                                 (nzOnConfirm)="deleteAction()"
                                 nzPopconfirmPlacement="topLeft"
                                 nz-button><i nz-icon nzType="rest" nzTheme="outline"></i>Delete</button>
